--- a/modules/topics-ui/browser/less/components/forum/topics-table-header.less
+++ b/modules/topics-ui/browser/less/components/forum/topics-table-header.less
@@ -1,10 +1,13 @@
 @import (less, reference) "~gitter-styleguide/css/components/headings.css";
 @import "../../colors";
+@import "../../break-points";
 
 .topics-table-header {
   background:    @light;
   border-bottom: 1px solid @topic-table-header-color;
   color:         @topic-table-header-color;
+
+  @media @small { display: none; }
 }
 
 .topics-table-header__cell {
